# sidemantic

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  Dockerfile  EXAMPLES.md  GOAL.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sidemantic-schema.json  test_cumulative.py  test_simple.py
.claude/: CLAUDE.md  architecture-analysis.md  malloy-adapter-analysis.md  settings.local.json
.claude-plugin/: marketplace.json
crates/dax-pyo3/: Cargo.toml  README.md  pyproject.toml
crates/dax-pyo3/python/sidemantic_dax/: __init__.py  ast.py
crates/dax-pyo3/src/: lib.rs
docs/: CNAME  GOTCHAS.md  README.md  STATUS.md  VIEW_DOCS.md  YAML_FORMAT.md  _interactive-query-broken.txt  _quarto.yml  adapters.qmd  advanced-features.qmd  auto-registration.md  cli-deprecations.md  cli.md  cli.qmd  config.qmd  connections.qmd  coverage-analyzer.qmd  dashboard.qmd  duckdb-extension.md  examples.qmd  generate_llms_txt.py  getting-started.qmd  index.qmd  interactive-demo.qmd  joins.qmd  llms.txt  marimo-interactive.qmd  mcp-server.qmd  measures.qmd  metrics.qmd  migrator.qmd  model-key-migration.md  models.qmd  native-fixtures.md  native-format.md  pre-aggregations.qmd  preagg-recommendations.qmd  pyodide.md  python-api.qmd  query-serving.md  (+25 more)
examples/: basic_example.py  chart_example.py  comprehensive_demo.py  comprehensive_example.py  export_example.py  lookml_multi_entity_duckdb_demo.ipynb  motherduck_example.py  multi_hop_joins_example.py  parameters_example.py  sidemantic_sql_duckdb_demo.ipynb  simplified_api_example.py  sql_query_example.py  sql_syntax_example.py  streamlit_dashboard.py  symmetric_aggregates_example.py  widget_demo.ipynb  widget_demo.marimo.py  widget_demo_simple.ipynb  yaml_syntax_example.py  yaml_syntax_example.yml
js/: package.json  widget.css  widget.js
scripts/: benchmark_semantic_sql_planner.py  build_demo_duckdb.py  build_foursquare_preagg_db.py  build_ui_distribution.py  build_webapp.py  build_widget.py  commit_chart.py  fix_test_fixtures.py  generate_compatibility_docs.py  generate_man_page.py  generate_schema.py  preagg_recommendation_example.py  rust_strict_probe.py  setup-dns.sh  test_information_schema_compat.py
sidemantic/: __init__.py  api_server.py  bootstrap.py  charts.py  cli.py  cli_contract.py  cli_polish.py  codegen.py  config.py  dashboard.py  datafiles.py  fidelity.py  formats.py  language_server.py  loaders.py  manpage.py  mcp_server.py  project.py  quickstart.py  rust_bridge.py  rust_parity.py  schema.py  testing.py  validation.py  validation_runner.py  vendor_assets.py  viz.py  yaml_compat.py
sidemantic-duckdb/: .gitignore  CMakeLists.txt  Makefile  README.md  demo.sql  extension_config.cmake
sidemantic-duckdb/docs/: README.md
sidemantic-duckdb/extension-ci-tools/scripts/: append_extension_metadata.py  configure_helper.py  modify_distribution_matrix.py
sidemantic-duckdb/scripts/: bootstrap-template.py
sidemantic-duckdb/src/: sidemantic_extension.cpp
sidemantic-duckdb/src/include/: sidemantic_extension.hpp
sidemantic-duckdb/test/sql/: sidemantic.test  sidemantic_memory_and_invalid_persistence.test  sidemantic_native_contract.test  sidemantic_persistence.test
sidemantic-rs/: Cargo.toml  README.md  pyproject.toml
sidemantic-rs/examples/: parity_adapter.rs
sidemantic-rs/include/: sidemantic.h
sidemantic-rs/src/: error.rs  ffi.rs  lib.rs  main.rs  python.rs  runtime.rs  wasm.rs  workbench.rs  workbench_demo_models.yml
sidemantic-rs/src/adapters/: cube.rs  mod.rs  osi.rs
sidemantic-rs/src/config/: loader.rs  mod.rs  schema.rs  sql_parser.rs
sidemantic-rs/src/core/: dependency.rs  graph.rs  inheritance.rs  mod.rs  model.rs  parameter.rs  relative_date.rs  symmetric_agg.rs  table_calc.rs
sidemantic-rs/src/db/: adbc.rs  mod.rs  result.rs  url.rs
sidemantic-rs/src/sql/: generator.rs  mod.rs  rewriter.rs
sidemantic-rs/tests/: adbc_driver_matrix.rs  adbc_duckdb_e2e.rs  adbc_engines.rs  c_abi_smoke.c  cli_smoke.rs  http_server.rs  lsp_protocol_smoke.py  lsp_protocol_smoke.rs  mcp_protocol.rs  native_fixtures.rs  package_metadata.rs  python_wheel_adbc_smoke.py  python_wheel_python_smoke.py  python_wheel_smoke.py  wasm_bindgen_runtime.rs  wasm_parity_subset.rs  workbench_pty_smoke.py  workbench_pty_smoke.rs
sidemantic-rs/tests/common/: mod.rs
sidemantic-rs/ui/: index.html
sidemantic-rs/ui/assets/: index-8HziKf13.js  index-B4hl3LFZ.js  index-BPxmC1UU.js  index-Bv9lbqCn.js  index-BvKT5Hcd.js  index-C1W0-a14.js  index-C5v05f6K.js  index-CB1QJYaF.js  index-CBoCPZLy.js  index-CIZidKXm.css  index-CLRgUx_p.js  index-CmTLWNpP.js  index-CxchelG9.css  index-D2woeODt.js  index-D5fCZv_N.js  index-D6RBWkgb.js  index-D_EIRKyZ.js  index-Dc4hUgmc.js  index-Dj3qHJDy.css  index-DzZZDhk9.css  index-DzjOqXP_.css  index-IljgGAuJ.js  index-J-sXQOPL.js  index-ZMx4y53m.js  index-jrUvvfLW.js  index-meWhngTf.css  index-ni2ZIkZO.js  index-se2QKSCD.css  index-uTiEpZhj.js  index-yOUh9mMj.js
sidemantic-wasm/: .gitignore  .npmignore  README.md  client.d.ts  client.js  codegen.d.ts  codegen.js  index.d.ts  index.js  package.json  vite.d.ts  vite.js
skills/: install.sh
tests/: conftest.py  optional_dep_stubs.py  rust_layer_adapter.py  test_adapter_integration.py  test_adapters.py  test_advanced_metrics.py  test_basic.py  test_bootstrap.py  test_bugfix_batch.py  test_build_webapp.py  test_build_widget.py  test_catalog.py  test_charts.py  test_cli_commands.py  test_cli_contract.py  test_cli_polish.py  test_cli_polish_integration.py  test_cli_project_contract.py  test_cli_scaffold_e2e.py  test_cli_t2_contract.py  test_codegen.py  test_config_files_and_credentials.py  test_config_snowflake_connection.py  test_consumption_contracts.py  test_core_imports.py  test_coverage_analysis_e2e.py  test_coverage_analyzer.py  test_coverage_analyzer_edge_cases.py  test_coverage_analyzer_generation.py  test_critical_fixes.py  test_cross_model_metrics.py  test_cumulative_metrics.py  test_dashboard.py  test_datafiles.py  test_dependencies.py  test_derived_metrics.py  (+68 more)
(+1329 files in other folders)
