[project]
name = "sidemantic"
version = "0.2.10"
description = "SQLGlot-based semantic layer with multi-format adapter support"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=25.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "lkml>=1.3.7",
    "duckdb>=1.0.0",
    "inflect>=7.0.0,<7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/docs",
  "/tests",
  "/examples",
  "*.pkg",
  "test_*.py",
  "uv.lock",
]
# README.md is included via readme field in [project]

[tool.hatch.build.targets.wheel]
packages = ["sidemantic"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "marimo==0.16.5",
    "pytest>=8.4.2",
]
