[package]
name = "sidemantic"
version = "0.1.0"
edition = "2021"
description = "A SQL-first semantic layer in Rust"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
sqlparser = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
once_cell = "1.19"
